Fixed Challenge title alignment

--- a/styles/site.css
+++ b/styles/site.css
@@ -412,6 +412,9 @@ h2 {
   background-image: url('../images/bg_product.jpg');
   background-color: #f6e9d8;
 }
+#challenge > article > header > h1 {
+  margin: 0 20px 0 25%;
+}
 #challenge > article {
   max-height: 350px;
 }
@@ -470,6 +473,9 @@ h2 {
 }
   
 @media (max-width: 768px) {
+  #challenge > article > header > h1 {
+    margin: 0;
+  }
   #challenge q {
     margin: 0 20px;
   }
